[project]
name = "tabmt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "cher", email = "cher18168402859@163.com"},
]
dependencies = ["torch>=2.6.0", "numpy>=2.0.2", "pandas>=2.2.3", "matplotlib>=3.9.4", "tqdm>=4.67.1"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.resolution]
respect-source-order = true

[[tool.pdm.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
verify_ssl = true

[[tool.pdm.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
include_packages = ["torch*"]
exclude_packages = []